--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-bootstrap-form==3.4
 django-crispy-forms==1.11.2
 django-filter==2.4.0
 django-money==1.3.1
+Django-Verify-Email==1.0.7
 Pillow==8.2.0
 py-moneyed==0.8.0
 pytz==2021.1
